--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 *.obj
 *.out
+*.obj
+ez430_chronos_scroll/868MHz - Unrestricted CCS Platinum/ccsObjs.opt
+ez430_chronos_scroll/868MHz - Unrestricted CCS Platinum/ccsObjs.opt
+*.obj
