--- a/ez430_chronos_noRadio_2/.project
+++ b/ez430_chronos_noRadio_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ez430_chronos_noRadio_2</name>
+	<name>SIT UP</name>
 	<comment></comment>
 	<projects>
 	</projects>
