--- a/ez430_chronos_noRadio_2/433MHz - Unrestricted CCS Platinum/makefile
+++ b/ez430_chronos_noRadio_2/433MHz - Unrestricted CCS Platinum/makefile
@@ -134,33 +134,33 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-ez430_chronos_noRadio_2_433MHz.out \
+SIT\ UP_433MHz.out \
 
 EXE_OUTPUTS__QUOTED += \
-"ez430_chronos_noRadio_2_433MHz.out" \
+"SIT UP_433MHz.out" \
 
 BIN_OUTPUTS += \
-ez430_chronos_noRadio_2_433MHz.hex \
+SIT\ UP_433MHz.hex \
 
 BIN_OUTPUTS__QUOTED += \
-"ez430_chronos_noRadio_2_433MHz.hex" \
+"SIT UP_433MHz.hex" \
 
 
 # All Target
-all: ez430_chronos_noRadio_2_433MHz.out
+all: SIT\ UP_433MHz.out
 
 # Tool invocations
-ez430_chronos_noRadio_2_433MHz.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
+SIT\ UP_433MHz.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MSP430 Linker'
-	"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/cl430" -vmspx --abi=coffabi -O4 --opt_for_speed=0 --use_hw_mpy=F5 -g --define=__CC430F6137__ --define=__CCE__ --define=ISM_LF --define=MRFI_CC430 --diag_warning=225 --display_error_number --diag_wrap=off --silicon_errata=CPU18 --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU23 --silicon_errata=CPU40 --call_assumptions=0 --gen_opt_info=2 --printf_support=minimal -z -m"ez430_chronos_noRadio_2_433MHz.map" --heap_size=80 --stack_size=80 --cinit_hold_wdt=on -i"E:/ti/ccsv6/ccs_base/msp430/include" -i"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/lib" -i"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/include" -i"E:/ti/ccsv6/ccs_base/msp430/lib" -i"E:/ti/ccsv6/ccs_base/msp430/lib/5xx_6xx_FRxx" --reread_libs --warn_sections --display_error_number --diag_wrap=off --xml_link_info="ez430_chronos_noRadio_2_433MHz_linkInfo.xml" --rom_model -o "ez430_chronos_noRadio_2_433MHz.out" $(ORDERED_OBJS)
+	"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/cl430" -vmspx --abi=coffabi -O4 --opt_for_speed=0 --use_hw_mpy=F5 -g --define=__CC430F6137__ --define=__CCE__ --define=ISM_LF --define=MRFI_CC430 --diag_warning=225 --display_error_number --diag_wrap=off --silicon_errata=CPU18 --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU23 --silicon_errata=CPU40 --call_assumptions=0 --gen_opt_info=2 --printf_support=minimal -z -m"SIT UP_433MHz.map" --heap_size=80 --stack_size=80 --cinit_hold_wdt=on -i"E:/ti/ccsv6/ccs_base/msp430/include" -i"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/lib" -i"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/include" -i"E:/ti/ccsv6/ccs_base/msp430/lib" -i"E:/ti/ccsv6/ccs_base/msp430/lib/5xx_6xx_FRxx" --reread_libs --warn_sections --display_error_number --diag_wrap=off --xml_link_info="SIT UP_433MHz_linkInfo.xml" --rom_model -o "SIT UP_433MHz.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 	@$(MAKE) --no-print-directory post-build
 
-ez430_chronos_noRadio_2_433MHz.hex: $(EXE_OUTPUTS)
+SIT\ UP_433MHz.hex: $(EXE_OUTPUTS)
 	@echo 'Invoking: MSP430 Hex Utility'
-	"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/hex430" --memwidth=8 --romwidth=8 -o "ez430_chronos_noRadio_2_433MHz.hex" $(EXE_OUTPUTS__QUOTED)
+	"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/hex430" --memwidth=8 --romwidth=8 -o "SIT UP_433MHz.hex" $(EXE_OUTPUTS__QUOTED)
 	@echo 'Finished building: $@'
 	@echo ' '
 
@@ -174,7 +174,7 @@ clean:
 
 post-build:
 	-@echo 'Create flash image: TI-TXT'
-	-"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/hex430.exe" --ti_txt "ez430_chronos_noRadio_2_433MHz.out" -o "ez430_chronos_noRadio_2_433MHz.txt" -order MS -romwidth 16
+	-"E:/ti/ccsv6/tools/compiler/ti-cgt-msp430_4.4.2/bin/hex430.exe" --ti_txt "SIT UP_433MHz.out" -o "SIT UP_433MHz.txt" -order MS -romwidth 16
 	-@echo ' '
 
 .PHONY: all clean dependents
