--- a/ez430_chronos_noRadio_2/433MHz - Unrestricted CCS Platinum/makefile
+++ b/ez430_chronos_noRadio_2/433MHz - Unrestricted CCS Platinum/makefile
@@ -11,7 +11,6 @@ $(GEN_CMDS__FLAG) \
 "./main.obj" \
 "./logic/acceleration.obj" \
 "./logic/alarm.obj" \
-"./logic/altitude.obj" \
 "./logic/battery.obj" \
 "./logic/clock.obj" \
 "./logic/date.obj" \
@@ -23,12 +22,10 @@ $(GEN_CMDS__FLAG) \
 "./driver/adc12.obj" \
 "./driver/as.obj" \
 "./driver/bmp_as.obj" \
-"./driver/bmp_ps.obj" \
 "./driver/buzzer.obj" \
 "./driver/display.obj" \
 "./driver/pmm.obj" \
 "./driver/ports.obj" \
-"./driver/ps.obj" \
 "./driver/timer.obj" \
 "../lnk_cc430f6137.cmd" \
 -l"rts430x.lib" \
@@ -167,8 +164,8 @@ SIT\ UP_433MHz.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)$(BIN_OUTPUTS__QUOTED)
-	-$(RM) "main.pp" "logic\acceleration.pp" "logic\alarm.pp" "logic\altitude.pp" "logic\battery.pp" "logic\clock.pp" "logic\date.pp" "logic\menu.pp" "logic\stopwatch.pp" "logic\temperature.pp" "logic\test.pp" "logic\user.pp" "driver\adc12.pp" "driver\as.pp" "driver\bmp_as.pp" "driver\bmp_ps.pp" "driver\buzzer.pp" "driver\display.pp" "driver\pmm.pp" "driver\ports.pp" "driver\ps.pp" "driver\timer.pp" 
-	-$(RM) "main.obj" "logic\acceleration.obj" "logic\alarm.obj" "logic\altitude.obj" "logic\battery.obj" "logic\clock.obj" "logic\date.obj" "logic\menu.obj" "logic\stopwatch.obj" "logic\temperature.obj" "logic\test.obj" "logic\user.obj" "driver\adc12.obj" "driver\as.obj" "driver\bmp_as.obj" "driver\bmp_ps.obj" "driver\buzzer.obj" "driver\display.obj" "driver\pmm.obj" "driver\ports.obj" "driver\ps.obj" "driver\timer.obj" 
+	-$(RM) "main.pp" "logic\acceleration.pp" "logic\alarm.pp" "logic\battery.pp" "logic\clock.pp" "logic\date.pp" "logic\menu.pp" "logic\stopwatch.pp" "logic\temperature.pp" "logic\test.pp" "logic\user.pp" "driver\adc12.pp" "driver\as.pp" "driver\bmp_as.pp" "driver\buzzer.pp" "driver\display.pp" "driver\pmm.pp" "driver\ports.pp" "driver\timer.pp" 
+	-$(RM) "main.obj" "logic\acceleration.obj" "logic\alarm.obj" "logic\battery.obj" "logic\clock.obj" "logic\date.obj" "logic\menu.obj" "logic\stopwatch.obj" "logic\temperature.obj" "logic\test.obj" "logic\user.obj" "driver\adc12.obj" "driver\as.obj" "driver\bmp_as.obj" "driver\buzzer.obj" "driver\display.obj" "driver\pmm.obj" "driver\ports.obj" "driver\timer.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
